# vm-lifecycle

./: Dockerfile  README.md  clouds.yaml.example  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements-openstack.txt
app/: main.py
app/api/: deps.py  middleware.py
app/api/routes/: health.py  vms.py
app/core/: config.py  exceptions.py  logging_config.py
app/models/: requests.py  responses.py  vm.py
app/repositories/: base.py  mock_repository.py  openstack_repository.py  sqlite_repository.py
app/services/: vm_service.py
docs/: api-reference.md  architecture.md  openstack-testing.md
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_core.py  test_sqlite_repository.py  test_vm_service.py
